--- a/index.html
+++ b/index.html
@@ -101,8 +101,11 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>Graphic Designer</h4>
-                    <p>I am a qualified graphic designer who has the appropriate skills to create
-                        good graphics;logos, posters, flyers, certificates etc
+                    <p>As a graphics designer, I specialize in creating impactful visuals that 
+                        combine creativity, clarity, and purpose. From logos and branding to digital content 
+                        and visual storytelling, my goal is to design work that not 
+                        only looks good but also communicates effectively and leaves a lasting impression
+        
                     </p>
                 </div>
             </div>
@@ -110,7 +113,10 @@
              <div class="service-box">
                 <div class="service-info">
                     <h4>frontend Designer</h4>
-                    <p>I can designe stunning frontend pages for website that fit customer requirements.
+                    <p>As a frontend designer, I focus on crafting visually appealing, intuitive, and responsive web experiences. 
+                        I blend design principles with modern web technologies to create interfaces 
+                        that are not only functional but also engaging. My goal is to make every 
+                        interaction smooth, accessible, and impactful for users
                     </p>
                 </div>
             </div>
@@ -211,4 +217,5 @@
     <script src="script.js"></script>
     
 </body>
+
 </html>
