--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="home-content">
             <h1>Hi, it's <span>Reagan</span></h1>
             <h3 class="text-animation">I'm a <span></span></h3>
-            <p>Programmer and a webdesigner: i can designe websites and also create them
-                 beggining from the frontend to the  backend and manage them.
+            <p>Reagan Katiechi: i am a guy who loves how the world is changing into a tech world and thus
+                i am specialised in technology services.
             </p>
             <div class="social-icons">
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
@@ -219,3 +219,4 @@
 </body>
 
 </html>
+
